--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "express": "~4.12.4"
+    "express": "~4.12.4",
+    "body-parser": "^1.18.3"
   }
 }
